[build-system]
requires = ["setuptools >= 43", "wheel", "setuptools_scm[toml] >= 3.4"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_lines = [
    "@(abc.)?abstract*",
    "except ImportError(.*):",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.coverage.run]
omit = [
    "*/setup.py",
    "*/dist/*",
    "*/tests/*",
    "*/.tox/*",
    "*/.eggs/*",
]

[tool.pytest.ini_options]
log_level = "DEBUG"
DJANGO_SETTINGS_MODULE = "server.settings_test"
pythonpath = [".", "server"]
addopts = ["-v", "--cov=.", "--cov-report", "term-missing"]
filterwarnings = [
    'ignore:"@coroutine" decorator:DeprecationWarning:aiohttp',
    'ignore:You passed a bytestring:DeprecationWarning:flake8.options.config',
    "ignore:Using or importing the ABCs from 'collections':DeprecationWarning:celery.canvas",
    "ignore:Using or importing the ABCs from 'collections':DeprecationWarning:yaml",
]
norecursedirs = [
    ".*",
    "build",
    "dist",
]

[tool.ruff]
extend-exclude = ["**/migrations/*.py"]
fix = true
target-version = "py310"

[tool.ruff.lint]
select = [
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Flynt
    "FLY",
    # isort
    "I",
    # Ruff-specific rules
    "RUF",
    # flake8-type-checking
    "TCH",
    # pyupgrade
    "UP",
    # pycodestyle
    "W",
]
ignore = ["RUF012"]

[tool.setuptools_scm]

[tool.ruff.lint.isort]
known-first-party = [
    "Collector",
    "CovReporter",
    "EC2StatusReporter",
    "FTB",
    "Reporter",
    "TaskStatusReporter",
    "covmanager",
    "crashmanager",
    "ec2spotmanager",
    "taskmanager",
]
