[build-system]
requires = ["setuptools >= 43", "wheel", "setuptools_scm[toml] >= 3.4"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_lines = [
    "@(abc.)?abstract*",
    "except ImportError(.*):",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.coverage.run]
omit = [
    "*/setup.py",
    "*/dist/*",
    "*/tests/*",
    "*/.tox/*",
    "*/.eggs/*",
]

[tool.pytest.ini_options]
log_level = "DEBUG"
DJANGO_SETTINGS_MODULE = "server.settings_test"
pythonpath = [".", "server"]
addopts = ["-v", "--cov=.", "--cov-report", "term-missing"]
filterwarnings = [
    'ignore:"@coroutine" decorator:DeprecationWarning:aiohttp',
    'ignore:You passed a bytestring:DeprecationWarning:flake8.options.config',
    "ignore:Using or importing the ABCs from 'collections':DeprecationWarning:celery.canvas",
    "ignore:Using or importing the ABCs from 'collections':DeprecationWarning:yaml",
]
norecursedirs = [
    ".*",
    "build",
    "dist",
]

[tool.mypy]
files = ["Collector", "FTB", "Reporter"]
exclude = ['/tests/']
ignore_missing_imports = true
show_error_codes = true
strict = true

[tool.ruff]
extend-exclude = ["**/migrations/*.py"]
fix = true
target-version = "py310"

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-future-annotations
    "FA",
    # Flynt
    "FLY",
    # refurb
    "FURB",
    # flake8-logging-format
    "G",
    # isort
    "I",
    # flake8-logging
    "LOG",
    # Perflint
    "PERF",
    # flake8-quotes
    "Q",
    # flake8-return
    "RET",
    # Ruff-specific rules
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TC",
    # pyupgrade
    "UP",
    # pycodestyle
    "W",
]
ignore = ["RUF012"]

[tool.ruff.lint.isort]
known-first-party = [
    "Collector",
    "CovReporter",
    "EC2StatusReporter",
    "FTB",
    "Reporter",
    "TaskStatusReporter",
    "covmanager",
    "crashmanager",
    "ec2spotmanager",
    "taskmanager",
]

[tool.setuptools_scm]
