[metadata]
name = WebCompatManager
author = Jesse Schwartzentruber & Christian Holler
description = A WebCompat management tools collection
license = MPL 2.0
url = https://github.com/MozillaSecurity/WebCompatManager
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
keywords = test testing

[options]
install_requires =
    jsonpath-ng
    jsonschema>=4.18.0
    python-dateutil
packages =
    webcompat
python_requires = >=3.9

[options.extras_require]
dev =
    pre-commit
    tox
server =
    celery~=5.3.5
    crispy-bootstrap3
    django~=4.2.7
    django-crispy-forms~=2.1
    django-enumfields~=2.1.1
    django-notifications-hq~=1.8.3
    djangorestframework~=3.15.1
    pyyaml
    redis[hiredis]
    whitenoise~=6.6.0
docker =
    gunicorn~=22.0.0
    mozilla-django-oidc~=4.0.1
    mysqlclient~=2.2.4
test =
    pytest
    pytest-cov
    pytest-django; python_version <= '3.11'
    pytest-mock
