[metadata]
name = FuzzManager
author = Christian Holler
description = A fuzzing management tools collection
license = MPL 2.0
url = https://github.com/MozillaSecurity/FuzzManager
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
    Topic :: Security
keywords = fuzz fuzzing security test testing

[options]
install_requires =
    fasteners>=0.14.1
    requests>=2.20.1
packages =
    Collector
    CovReporter
    EC2Reporter
    FTB
    FTB.Running
    FTB.Signatures
    Reporter
    TaskStatusReporter
python_requires = >=3.9

[options.entry_points]
console_scripts =
    collector = Collector:Collector.main
    cov-reporter = CovReporter:CovReporter.main
    ec2-reporter = EC2Reporter:EC2Reporter.main
    task-status-reporter = TaskStatusReporter:TaskStatusReporter.main

[options.extras_require]
dev =
    pre-commit
    tox
server =
    boto3
    celery~=5.3.5
    crispy-bootstrap3
    django~=4.2.7
    django-chartjs~=2.3.0
    django-crispy-forms~=2.1
    django-enumfields~=2.1.1
    django-notifications-hq~=1.8.3
    djangorestframework~=3.15.1
    laniakea
    pyyaml
    redis[hiredis]
    whitenoise~=6.9
taskmanager =
    fuzzing-decision @ git+https://github.com/MozillaSecurity/orion#subdirectory=services/fuzzing-decision
    MozillaPulse
docker =
    gunicorn~=23.0.0
    mercurial
    mozilla-django-oidc~=4.0.1
    mysqlclient~=2.2.4
test =
    pytest
    pytest-cov
    pytest-django; python_version <= '3.11'
    pytest-mock
